Add code from module 08

--- a/CC.Web/app/layout/sidebar.html
+++ b/CC.Web/app/layout/sidebar.html
@@ -3,6 +3,14 @@
     <div class="sidebar-dropdown"><a href="#">Menu</a></div>
     <div class="sidebar-inner">
         <div class="sidebar-widget">
+            <form class="form-inline">
+                <div class="input-group-addon">
+                    <input type="text" placeholder="Find sessions" data-ng-model="vm.searchText"
+                           data-ng-keyup="vm.search($event)" />
+                    <a class="btn btn-info btn-notext" data-ng-click="vm.search($event)"><i class="fa fa-search"></i></a>
+                </div>
+
+            </form>
         </div>
         <ul class="navi">
             <li class="nlightblue fade-selection-animation" data-ng-class="vm.isCurrent(r)"
