Add code from module 11

--- a/CC.Web/app/layout/shell.html
+++ b/CC.Web/app/layout/shell.html
@@ -1,4 +1,14 @@
 ﻿<div data-ng-controller="shell as vm">
+    <div id="splash-page" data-ng-show="vm.showSplash" class="dissolve-animation">
+        <div class="page-splash">
+            <div class="page-splash-message">
+                CodeCamper Angular-Breeze
+            </div>
+            <div class="progress progress-striped active page-progress-bar">
+                <div class="bar"></div>
+            </div>
+        </div>
+    </div>
     <header class="clearfix">
         <div data-ng-include="'/app/layout/topnav.html'"></div>
     </header>
