--- a/CC.Web/app/layout/sidebar.html
+++ b/CC.Web/app/layout/sidebar.html
@@ -17,6 +17,10 @@
                 data-ng-repeat="r in vm.navRoutes">
                 <a href="#{{r.url}}" data-ng-bind-html="r.config.settings.content"></a>
             </li>
+            <li data-cc-wip wip="vm.wip" routes="vm.routes" changed-event="{{vm.wipChangedEvent}}" class="nlightblue">
+
+            </li>
+
             <li class="nlightblue">
                 <a href="" data-ng-click="vm.clearStorage()">
                     <i class="glyphicon glyphicon-cloud"></i> Clear Storage
